--- a/index.html
+++ b/index.html
@@ -5,28 +5,28 @@
 	<title>Blog+</title>
 	<link rel="stylesheet" href="css/common.css">
 	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="css/module-grid.css">
 	<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 </head>
 <body>
 	<div class="header">
 		<div class="center">
 		<div class="header-left clearfix">
-			<a href="index.html">
-				<img src="css/img/BLOG+.png" alt>
-			</a>
+			<img src="css/img/BLOG+.png" alt title="Logotype">
 			<nav>
 				<ul class="topmenu">
-				<li><a class="rubric" href="">Рубрики</a></li>
-				<li><a class="galery" href="">Галерея</a>
-					<ul class="popupmenu">
-						<li><a href=""></a>Lorem ipsum 1</li>
-						<li><a href=""></a>Lorem ipsum 2</li>
-						<li><a href=""></a>Lorem ipsum 3</li>
-						<li><a href=""></a>Lorem ipsum 4</li>
-					</ul>
-				</li>
-				<li><a href="">Контакты</a></li>
-			</ul>
+					<li><a class="rubric" href="">Рубрики</a>
+					</li>
+					<li><a class="galery" href="">Галерея</a>
+						<ul class="popupmenu">
+							<li><a href=""></a>Lorem ipsum 1</li>
+							<li><a href=""></a>Lorem ipsum 2</li>
+							<li><a href=""></a>Lorem ipsum 3</li>
+							<li><a href=""></a>Lorem ipsum 4</li>
+						</ul>
+						</li>
+					<li><a href="">Контакты</a></li>
+				</ul>
 			</nav>
 		</div>
 		<div class="header-right">
@@ -34,5 +34,8 @@
 		</div>
 	</div>
 	</div>
+	<section class="center">
+		<h3>Сетка флоатов (12 позиций)</h3>
+	</section>
 </body>
 </html>
