--- a/index.html
+++ b/index.html
@@ -34,8 +34,95 @@
 		</div>
 	</div>
 	</div>
-	<section class="center">
-		<h3>Сетка флоатов (12 позиций)</h3>
+	<section class="float">
+		<div class="headline">
+			<h3>Сетка флоатов (12 позиций)</h3>
+		</div>
+		<div class="line">
+			<img src="css/img/line.png" alt>
+		</div>
+		<div class="module-grid__cell-11">
+    		<div class="demo">&nbsp;</div>
+ 		</div>
+		  <div class="module-grid__cell-1">
+		    <div class="demo">&nbsp;</div>
+		  </div>
+		  <div class="module-grid__cell-10">
+		    <div class="demo">&nbsp;</div>
+		  </div>
+		  <div class="module-grid__cell-2">
+		    <div class="demo">&nbsp;</div>
+		  </div>
+		  <div class="module-grid__cell-9">
+		    <div class="demo">&nbsp;</div>
+		  </div>
+		  <div class="module-grid__cell-3">
+		    <div class="demo">&nbsp;</div>
+		  </div>
+		  <div class="module-grid__cell-8">
+		    <div class="demo">&nbsp;</div>
+		  </div>
+		  <div class="module-grid__cell-4">
+		    <div class="demo">&nbsp;</div>
+		  </div>
+		  <div class="module-grid__cell-7">
+		    <div class="demo">&nbsp;</div>
+		  </div>
+		  <div class="module-grid__cell-5">
+		    <div class="demo">&nbsp;</div>
+		  </div>
+		  <div class="module-grid__cell-6">
+		    <div class="demo">&nbsp;</div>
+		  </div>
+		  <div class="module-grid__cell-6">
+		    <div class="demo">&nbsp;</div>
+		  </div>
+		<div class="headline2">
+			<h3>Сетка флоатов с отступами</h3>
+		</div>
+		<div class="second_float">
+			<div class="line">
+					<img src="css/img/line.png" alt>
+				</div>
+		  <div class="second module-grid--gutters">
+		    <div class="module-grid__cell-11">
+		    <div class="demo2">&nbsp;</div>
+		  </div>
+		  <div class="module-grid__cell-1">
+		    <div class="demo2">&nbsp;</div>
+		  </div>
+		  <div class="module-grid__cell-10">
+		    <div class="demo2">&nbsp;</div>
+		  </div>
+		  <div class="module-grid__cell-2">
+		    <div class="demo2">&nbsp;</div>
+		  </div>
+		  <div class="module-grid__cell-9">
+		    <div class="demo2">&nbsp;</div>
+		  </div>
+		  <div class="module-grid__cell-3">
+		    <div class="demo2">&nbsp;</div>
+		  </div>
+		  <div class="module-grid__cell-8">
+		    <div class="demo2">&nbsp;</div>
+		  </div>
+		  <div class="module-grid__cell-4">
+		    <div class="demo2">&nbsp;</div>
+		  </div>
+		  <div class="module-grid__cell-7">
+		    <div class="demo2">&nbsp;</div>
+		  </div>
+		  <div class="module-grid__cell-5">
+		    <div class="demo2">&nbsp;</div>
+		  </div>
+		  <div class="module-grid__cell-6">
+		    <div class="demo2">&nbsp;</div>
+		  </div>
+		  <div class="module-grid__cell-6">
+		    <div class="demo2">&nbsp;</div>
+		  </div>
+		  </div>
+		</div>
 	</section>
 </body>
 </html>
