--- a/index.html
+++ b/index.html
@@ -35,8 +35,10 @@
 	</div>
 	</div>
 	<div class="first-float">
-		<div class="headline_txt">
-			<h3>Сетка флоатов (12 позиций)</h3>
+		<div class="module-grid__cell-12">
+			<div class="headline_txt">
+				<h3>Сетка флоатов (12 позиций)</h3>
+			</div>
 		</div>
 		<div class="line">
 			<img src="css/img/line.png" alt>
@@ -79,8 +81,10 @@
 		</div>
 	</div>
 	<div class="second-float">
-	<div class="headline_txt-2">
-			<h3>Сетка флоатов, с отступами</h3>
+		<div class="module-grid__cell-12">
+			<div class="headline_txt-2">
+				<h3>Сетка флоатов, с отступами</h3>
+			</div>
 		</div>
 		<div class="line">
 			<img src="css/img/line.png" alt>
@@ -123,6 +127,24 @@
 				<div class="second-float__content">&nbsp;</div>
 			</div>
 		</div>	
+	</div>
+	<div class="reviews">
+		<div class="module-grid__cell-12">
+			<div class="headline_txt-3">
+				<h3>Отзывы посетителей нашего сайта</h3>
+			</div>
+		</div>
+		<div class="line">
+			<img src="css/img/line.png" alt>
+		</div>
+		<div class="reviews-text">
+			<div class="reviews-avatr module-grid__cell-2">
+				<img src="css/img/user_avatar.png" alt>
+			</div>
+			<div class="reviews-text__desc module-grid__cell-10">
+				<p>Иван Иванов <img src="css/img/calendar.svg.png" alt><time>11 февраля 2016</time></p>
+			</div>
+		</div>
 	</div>
 </body>
 </html>
